Follow up bug 1024496 - Call _updateScrollButtonsDisabledState after setting the notoverflowing attribute such that the scrolledtoend attribute isn't left behind and bug 878020 - Add inner shadows to the tab bar's scrollbox when overflowing

--- a/addon/chrome/content/overlay/browsr.css
+++ b/addon/chrome/content/overlay/browsr.css
@@ -340,3 +340,9 @@ so display: none !important; does not hide the button */
   padding-top: 0px !important;
   padding-bottom: 0px !important;
 }
+
+/* Firefox 32+ */
+.tabbrowser-arrowscrollbox[flowing="multibar"] > .arrowscrollbox-overflow-start-indicator,
+.tabbrowser-arrowscrollbox[flowing="multibar"] > .arrowscrollbox-overflow-end-indicator {
+  margin-bottom: 0px;
+}
